--- a/notebooks/highway_simulation_rl_project.ipynb
+++ b/notebooks/highway_simulation_rl_project.ipynb
@@ -3986,7 +3986,7 @@
     "              gradient_steps=1,\n",
     "              target_update_interval=50,\n",
     "              verbose=1,\n",
-    "              tensorboard_log=\"highway_dqn_baseline/\")\n",
+    "              tensorboard_log=\"highway_dqn_baseline/tensorboard_logs\")\n",
     "model.learn(int(2e4))\n",
     "model.save(\"highway_dqn_baseline/model\")"
    ]
