chore: push all logs and updated models

--- a/report/rl_project_template.tex
+++ b/report/rl_project_template.tex
@@ -37,12 +37,12 @@
 % author name.
 
 \author{
-  David S.~Hippocampus
+  Leone Lage Perdigão
   \\
   Department of Computer Science\\
   University of Bath\\
   Bath, BA2 7AY \\
-  \texttt{hippo@bath.ac.uk} \\
+  \texttt{llp31@bath.ac.uk} \\
   %% examples of more authors
   %% \And
   %% Coauthor \\
